--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Login Page</title>
 </head>
 <body>
+    <div class="main-container">
     <div class="flex-container">
         <img src="images/hero-image.png" alt="Logo Image" class="logo-img">
         <div class="content">
-            <img src="images/logo.svg" alt="logo">
+            <img class="logo" src="images/logo.svg" alt="logo">
             <span class="tagline">We are <span class="expert">experts</span> business, marketing, growth, & sales.</span>
             <span class="login">Login into your account</span>
             <form class="login-form">
@@ -28,5 +29,6 @@
             </form>
         </div>
     </div>
+</div>
 </body>
 </html>
