--- a/dashboard.html
+++ b/dashboard.html
@@ -8,11 +8,11 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
-    <div class="main-container">
-        <div class="flex-container">
+    <div>
+        <div class="dashboard-container">
             <Header>
                 <div class="flex-left">
-                    <img src="images/menu-bar.svg" alt="menu bar" class="menu-bar">
+                    <img src="images/menu-bar.svg" alt="menu bar">
                     <img src="images/logo.svg" alt="logo" class="logo">
                 </div>
                 <div class="flex-right">
@@ -20,17 +20,47 @@
                     <img src="images/search-icon.svg" class="search">
                     <input type="text" placeholder="Search" class="search-txt">
                     </div>
-                    <div>
-                    <div>
-                    <img src="images/notification-icon.svg" class="notification">
+                    <div class="right-panel">
+                    <img src="images/notification-icon.svg">
                     <img src="images/profile.png" class="profile">
-                    <span>John Doe</span>
-                    <img src="images/downward-arrow.svg">
+                    <span class="profile-text">John Doe</span>
+                    <img src="images/downward-arrow.svg" class="arrow">
                     </div>
                 </div>
-                </div>
             </Header>
+            <section class="main">
+                <div class="side-bar">
+                    <div class="side-bar-item item-1">
+                        <img src="images/dashboard-active.svg" class="sidebar-item-icon">
+                        <span class="sidebar-item-text" style="color: #C8242F;">Dashboard</span>
+                    </div>
+                    <div class="side-bar-item">
+                        <img src="images/graph-default.svg" class="sidebar-item-icon">
+                        <span class="sidebar-item-text">Analysis</span>
+                    </div>
+                    <div class="side-bar-item">
+                        <img src="images/inbox-default.svg" class="sidebar-item-icon">
+                        <span class="sidebar-item-text">Inbox</span>
+                    </div>
+                    <div class="side-bar-item">
+                        <img src="images/clock-default.svg" class="sidebar-item-icon">
+                        <span class="sidebar-item-text">History</span>
+                    </div>
+                    <div class="side-bar-item">
+                        <img src="images/user-default.svg" class="sidebar-item-icon">
+                        <span class="sidebar-item-text">User</span>
+                    </div>
+                    <div class="side-bar-item">
+                        <img src="images/maintenance-default.svg" class="sidebar-item-icon">
+                        <span class="sidebar-item-text">Maintenance</span>
+                    </div>
+                    <div class="side-bar-item">
+                        <img src="images/setting-default.svg" class="sidebar-item-icon">
+                        <span class="sidebar-item-text">Setting</span>
+                    </div>
+                </div>
+                <div class="main-dashboard"></div>
+            </section>
         </div>
     </div>
 </body>
-</html>
