--- a/innerpage.html
+++ b/innerpage.html
@@ -89,7 +89,7 @@
             <!-- Two column -->
             <div class="col-box">
               <span class="head-text">Two Column</span>
-              <div class="row">
+              <div class="row"> 
                 <div class="col">
                   <div class="control">
                     <input class="txt-control" type="text" id="name" required>
@@ -253,17 +253,22 @@
                 <button class="primary">Primary</button>
                 <button class="secondary">Secondary</button>
               </div>
-              <ul class="navbar">
-                <li class="navbar-item">
-                  <a class="navbar-link active" href="#">Tab 1</a>
+
+              <div class="inner-head-text" style="margin-top: 35px;">
+                Tabs
+              </div>
+              <ul class="tabs">
+                <li class="tab-item active">
+                  <a class="tab-link">Tab 1</a>
                 </li>
-                <li class="navbar-item">
-                  <a class="navbar-link deactive" href="#">Monthly</a>
+                <li class="tab-item">
+                  <a class="tab-link">Tab 2</a>
                 </li>
-                <li class="navbar-item">
-                  <a class="navbar-link deactive" href="#">Yearly</a>
+                <li class="tab-item">
+                  <a class="tab-link ">Tab 3</a>
                 </li>
               </ul>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing.</p>
             </div>
           </div>
         </div>
