--- a/dashboard.html
+++ b/dashboard.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@500' rel='stylesheet'> -->
     
 </head>
@@ -15,8 +15,9 @@
         <div class="dashboard-container">
             <Header>
                 <div class="flex-left">
-                    <img src="images/menu-bar.svg" alt="menu bar">
-                    <img src="images/logo.svg" alt="logo" class="logo">
+                    <input type="checkbox" id="check">
+                    <label for="check"><img src="images/menu-bar.svg" alt="menu bar" id="menu-bar"></label>
+                    <img src="images/logo.svg" alt="logo" class="logo" id="logo">
                 </div>
                 <div class="flex-right">
                     <div>
