Responsive Dashboard completed

--- a/innerpage.html
+++ b/innerpage.html
@@ -24,7 +24,7 @@
             <input type="text" placeholder="Search" class="search-txt">
           </div>
           <div class="right-panel">
-            <img src="images/notification-icon.svg">
+            <img src="images/notification-icon.svg" id="notification">
             <img src="images/profile.png" class="profile">
             <span class="profile-text">John Doe</span>
             <img src="images/downward-arrow.svg" class="arrow">
