--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,7 @@
           <div class="flex-left">
             <input type="checkbox" id="check" />
             <label for="check"
-              ><img src="images/menu-bar.svg" alt="menu bar" id="menu-bar"
+              ><img src="images/menu-bar.svg" alt="menu bar" id="menu-bar" class="menu-bar"
             /></label>
             <img src="images/logo.svg" alt="logo" class="logo" id="logo" />
           </div>
