--- a/innerpage.html
+++ b/innerpage.html
@@ -92,28 +92,28 @@
             <!-- Two column -->
             <div class="container-fluid col-box">
               <span class="head-text">Two Column</span>
-              <div class="row"> 
-                <div class="col">
+              <div class="row gy-2"> 
+                <div class="col-12 col-sm-6">
                   <div class="control">
                     <input class="txt-control" type="text" id="name" required>
                     <label for="name">Name</label>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-sm-6">
                   <div class="control">
                     <input class="txt-control" type="text" id="uname" required>
                     <label for="uname">Username</label>
                   </div>
                 </div>
               </div>
-              <div class="row" style="margin-top: 21px">
-                <div class="col">
+              <div class="row gy-2" style="margin-top: 2px">
+                <div class="col-12 col-sm-6">
                   <div class="control">
                     <input class="txt-control" type="password" id="pass" required>
                     <label for="pass">Password</label>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-sm-6 ">
                   <div class="control">
                     <select class="dropdown-control">
                       <option>Dropdown</option>
@@ -128,20 +128,20 @@
             <!-- Three Column -->
             <div class="container-fluid col-box">
               <span class="head-text">Three Column</span>
-              <div class="row">
-                <div class="col">
+              <div class="row gy-2">
+                <div class="col-12 col-sm-6 col-md-4  col-lg-4 col-xl-4">
                   <div class="control">
                     <input class="txt-control" type="text" id="focus" required>
                     <label for="focus">Focus</label>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-sm-6 col-md-4  col-lg-4 col-xl-4">
                   <div class="control">
                     <input class="txt-control" type="password" id="pass1" required>
                     <label for="pass1">Password</label>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-sm-12 col-md-4  col-lg-4 col-xl-4">
                   <div class="control">
                     <input class="disable-control" type="text" id="disable" name="disable" value="JohnDoe" disabled>
                     <label for="disable">Disabled</label>
@@ -153,8 +153,8 @@
             <!-- Four Column -->
             <div class="container-fluid  col-box">
               <span class="head-text">Four Column</span>
-              <div class="row">
-                <div class="col-sm-6">
+              <div class="row gy-2">
+                <div class="col-12 col-sm-6 col-md-4  col-lg-3 col-xl-3">
                   <div class="control">
                     <input class="validate-control" type="text" id="designation" name="designation" value="UI Designer"
                       required>
@@ -162,20 +162,20 @@
                     <span>Enter Valid data</span>
                   </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                   <div class="control">
                     <input class="info-control" type="text" id="name" required>
                     <label for="name">Name</label>
                     <span>Enter your full Name as per ID</span>
                   </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                   <div class="control">
                     <input class="txt-control" type="text" id="uname" name="uname" required value="JohnDoe">
                     <label for="uname">Username</label>
                   </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-12 col-sm-6 col-md-12  col-lg-3 col-xl-3">
                   <div class="control">
                     <select class="dropdown-control">
                       <option>Select</option>
@@ -218,31 +218,31 @@
                     2</span></div>
               </div>
 
-              <div class="inner-head-text" style="margin-top: 35px;">
+              <div class="inner-head-text" style="margin-top: 35px; margin-bottom: 25px;">
                 Snackbar
               </div>
-              <div class="row">
-                <div class="col">
+              <div class="row gy-2">
+                <div class="col-12 col-sm-12 col-md-6  col-lg-6 col-xl-6">
                   <div class="snackbar error">
                     <img src="images/error-icon.svg">
                       This is an error Message.
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-sm-12 col-md-6  col-lg-6 col-xl-6">
                   <div class="snackbar info">
                     <img src="images/info-icon.svg">
                     This is an information message!
                   </div>
                 </div>
               </div>
-              <div class="row" style="margin-top: 25px;">
-                <div class="col">
+              <div class="row gy-2" style="margin-top: 2px;">
+                <div class="col-12 col-sm-12 col-md-6  col-lg-6 col-xl-6">
                   <div class="snackbar warning">
                     <img src="images/warning-icon.svg">
                       This is a warning message!
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-sm-12 col-md-6  col-lg-6 col-xl-6">
                   <div class="snackbar success">
                     <img src="images/success-icon.svg">
                     This is a success message!
